2008-09-20  Martyn Russell  <martyn@imendio.com>

	*.[ch]: Tabbify code.

2008-09-20  Martyn Russell  <martyn@imendio.com>

	*.[ch]: Removed all trailing whitespace.

2008-09-20  Ivan Frade  <ivan.frade@nokia.com>

	* tests/tracker-indexer/Makefile.am: Revert previous change. Using
	symbolic links instead of BUILD_SOURCES var.
	
2008-09-19  Martyn Russell  <martyn@imendio.com>

	* src/tracker-indexer/tracker-indexer.c: Call service_def
	'service' and field_def 'field'.

2008-09-19  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-processor.c: Reduce the size of the list of
	files we send to the indexer down to 1000 from 5000. DBus isn't
	supposed to be optimized for > 4kb chunks.

	* src/tracker-indexer/tracker-indexer.c: Make sure we remove all
	entries in the hash table we use for mtime cache on parent
	directories when we have finished indexing. Use Quarks to know
	what the current module is instead of strdup() every time we
	process a file. Actually free the TrackerMetadata on move events.

	* src/tracker-indexer/tracker-metadata-utils.c: (get_file_content):
	Don't write until the end of the buf, use a length, we know it and it
	should be faster if the GString function doesn't need to calculate the
	length too.k

2008-09-17  Ivan Frade  <ivan.frade@nokia.com>

	* tests/tracker-indexer/Makefile.am: Using BUILD_SOURCES
	automake's var to fix the build.
	
2008-09-17  Martyn Russell  <martyn@imendio.com>

	* tests/tracker-indexer/Makefile.am: Tried fixing the ln -s
	generated files hack which breaks the build right now.

2008-09-17  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-file-utils.c:
	(tracker_file_get_mime_type), (path_has_write_access): Fixed
	GFileInfo memory leaks.
	
	* src/libtracker-common/tracker-ontology.c:
	(tracker_ontology_get_field_by_id): Fixed GList memory leak from
	g_hash_table_get_values() call.
	
	* src/libtracker-common/tracker-parser.c: (analyze_text),